[package]
name = "jwt"
version = "0.1.0"
edition = "2024"

[dependencies]
base64-url = "3.0.0"
chrono = "0.4.44"
dotenv = "0.15.0"
hex = "0.4.3"
hmac_crate = { git = "https://github.com/DarthPrince2023/cryptography", branch = "master" }
load-dotenv = "0.1.2"
regex = "1.12.4"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sha2 = "0.10.9"
simple-base64 = "0.23.2"
subtle = "2.6.1"
uuid = { version = "1.22.0", features = ["serde", "v4"] }
